[package]
name = "termscope"
version = "0.1.0"
authors = ["Suyash458 <suyash.behera458@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.18"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }